Prepare for CI/CD Papline